fixed spacing on value props and footer

--- a/src/styles/styling.css
+++ b/src/styles/styling.css
@@ -77,7 +77,12 @@ body {
 }
 
 .intro-title {
-  background-image: linear-gradient(180deg, #2393fb 0%, #4c61fd 99.99%, rgba(77, 95, 253, 0) 100%);
+  background-image: linear-gradient(
+    180deg,
+    #2393fb 0%,
+    #4c61fd 99.99%,
+    rgba(77, 95, 253, 0) 100%
+  );
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -249,7 +254,7 @@ body {
   font-weight: bold;
   font-size: 50px;
   line-height: 139.5%;
-  margin: 100px 0 30px 0;
+  margin: 35px 0 30px 0;
   color: #323232;
 }
 
@@ -280,7 +285,12 @@ body {
   border-color: #2393fb;
 
   background-color: #2393fb;
-  background-image: linear-gradient(180deg, #2393fb 0%, #4c61fd 99.99%, rgba(77, 95, 253, 0) 100%);
+  background-image: linear-gradient(
+    180deg,
+    #2393fb 0%,
+    #4c61fd 99.99%,
+    rgba(77, 95, 253, 0) 100%
+  );
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -359,7 +369,12 @@ body {
   font-size: 15px;
   color: #ffffff;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(180deg, #2393fb 0%, #4c61fd 99.99%, rgba(77, 95, 253, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    #2393fb 0%,
+    #4c61fd 99.99%,
+    rgba(77, 95, 253, 0) 100%
+  );
   filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.25));
   border-radius: 65px;
   white-space: nowrap;
@@ -367,7 +382,12 @@ body {
 
 .footer-contact-button:hover {
   color: #ffffff;
-  background: linear-gradient(180deg, #197edd 0%, #384de6 99.99%, rgba(77, 95, 253, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    #197edd 0%,
+    #384de6 99.99%,
+    rgba(77, 95, 253, 0) 100%
+  );
 }
 
 .footer-contact-text {
@@ -381,6 +401,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 15px;
 }
 
 .footer {
